# N.E.K.O

./: .gitignore  README.MD  agent_server.py  memory_server.py  pyproject.toml
.agent/rules/: neko-guide.md
.agent/skills/post-work-analysis/: SKILL.md
.agent/skills/vrm-physics/: SKILL.md
brain/: browser_use_adapter.py  computer_use.py  task_executor.py
brain/cua/agents/: grounding.py
config/: __init__.py  api_providers.json  prompts_sys.py
docs/: README_en.md  README_ja.md
main_logic/: core.py  omni_realtime_client.py  tts_client.py
main_routers/: config_router.py  system_router.py
memory/: recent.py
static/: achievement_manager.js  app.js  common_ui.js  live2d-emotion.js  live2d-interaction.js  live2d-model.js  live2d-ui-buttons.js  live2d-ui-drag.js  live2d-ui-hud.js  live2d-ui-popup.js  vrm-animation.js  vrm-core.js  vrm-cursor-follow.js  vrm-interaction.js  vrm-manager.js  vrm-ui-buttons.js  vrm-ui-popup.js
static/css/: api_key_settings.css  chara_manager.css  memory_browser.css  steam_workshop_manager.css  voice_clone.css
static/js/: agent_ui_v2.js  api_key_settings.js
static/locales/: en.json  ja.json  ko.json  zh-CN.json  zh-TW.json
templates/: api_key_settings.html  live2d_emotion_manager.html  model_manager.html  steam_workshop_manager.html
utils/: config_manager.py  language_utils.py
